Ajout du BG aqua et des assets

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-image: linear-gradient(10deg, #0071BC, #00A99D); height:100%">
 
 <head>
   <meta charset="utf-8">
