--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="background-image: linear-gradient(10deg, #0071BC, #00A99D); height:100%">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body>
+<body style="background-image: linear-gradient(10deg, #0071BC, #00A99D); height:100%">
   <app-root></app-root>
   <router-outlet></router-outlet>
 </body>
