Ajout des technos au dashboard

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -9,9 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body style="background-image: linear-gradient(10deg, #0071BC, #00A99D); height:100%">
+<body class="aqua">
   <app-root></app-root>
-  <router-outlet></router-outlet>
 </body>
 
 </html>
