Ajout banderau des travaux

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="aqua">
+  <h1 class="text-center">🚧 Site en cours de développement depuis le 02/11/2023 🚧</h1>
   <app-root></app-root>
 </body>
 
